<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Challengeweek_v2</string>
    <string name="Challengeweek">Challengeweek</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_beginscherm">Beginscherm</string>
    <string name="Email">E-mail</string>
    <string name="Overzichtallestudenten"> OVERZICHT VAN ALLE STUDENTEN </string>
    <string name="volgende">VOLGENDE</string>
    <string name="opslaan">Opslaan</string>
    <string name="opmerkingen">Opmerkingen</string>
    <string name="Wachtwoord">Wachtwoord</string>
    <string name="Overzicht">Overzicht</string>
    <string name="instellingen">INSTELLINGEN</string>
    <string name="Overzichtklassen">OVERZICHT GROEPEN PER KLAS</string>
    <string name="Versie">VERSIE</string>
    <string name="Disclaimer">DISCLAIMER</string>
    <string name="Uitloggen">UITLOGGEN</string>
    <string name="some_text"> Selecteer hier een student </string>
    <string name="some_hint"> Typ hier om student te zoeken </string>
    <string name="Overzichtstudenten">OVERZICHT STUDENTEN PER KLAS</string>
    <string name="Overzichtgroepen"> Overzicht groepen</string>
    <string name="title_activity_overzicht_studenten">OverzichtStudenten</string>
    <string name="hello_world">Hello world!</string>
    <string name="Klassen">Selecteer hier een klas</string>
    <string name="Studenten">Studenten</string>
    <string name="inf1a">INF1A</string>
    <string name="inf1b">INF1B</string>
    <string name="inf1c">INF1C</string>
    <string name="inf1d">INF1D</string>
    <string name="inf1e">INF1E</string>
    <string name="inf1f">INF1F</string>
    <string name="inf1g">INF1G</string>
    <string name="inf1h">INF1H</string>
    <string name="inf1i">INF1I</string>
    <string name="inf1j">INF1J</string>
    <string name="inf1k">INF1K</string>
    <string name="groepen">Selecteer hier een groep </string>
    <string name="groep2"> Groep 2</string>
    <string name="groep3"> Groep 3</string>
    <string name="groep4"> Groep 4</string>
    <string name="groep5"> Groep 5</string>
    <string name="groep6"> Groep 6</string>
    <string name="groep1"> Groep 1</string>
    <string name="Verzenden">VERZENDEN</string>
    <string name="Beoordeling">Beoordeling</string>
    <string name="Criteriagehaald">Criteria behaald</string>
    <string name="vraagbeoordelingbevestigen">Wilt u dit cijfer bevestigen?</string>
    <string name="jabevestigen">Ja, bevestigen</string>
    <string name="neebeoordeling">Nee, beoordeling aanpassen</string>
    <string name="title_activity_overzicht_klassen">OverzichtKlassen</string>
    <string name="title_activity_instellingen">Instellingen</string>
    <string name="title_activity_versiescherm">Versiescherm</string>
    <string name="title_activity_disclaimerscherm">Disclaimerscherm</string>
    <string name="title_activity_beoordelingscherm">Beoordelingscherm</string>
    <string name="title_activity_bevestigingsscherm">Bevestigingsscherm</string>
    <string name="title_activity_overzicht_studenten_2">OverzichtStudenten_2</string>
    <string name="title_activity_overzicht__studenten2">Overzicht_Studenten2</string>
    <string name="title_activity_opmerkingenscherm">Opmerkingenscherm</string>
    <string name="title_activity_overzicht__studenten1">Overzicht_Studenten1A</string>
    <string name="title_activity_selecteer__studenten1_b">Selecteer_Studenten1B</string>
    <string name="title_activity_overzicht__studenten1_c">Overzicht_Studenten1C</string>
    <string name="title_activity_overzicht__studenten1_d">Overzicht_Studenten1D</string>
    <string name="title_activity_overzicht__studenten1_e">Overzicht_Studenten1E</string>
    <string name="title_activity_overzicht__studenten1_f">Overzicht_Studenten1F</string>
    <string name="title_activity_overzicht__studenten1_g">Overzicht_Studenten1G</string>
    <string name="title_activity_overzicht__studenten1_h">Overzicht_Studenten1H</string>
    <string name="title_activity_overzicht_groepen">OverzichtGroepen</string>
    <string name="title_activity_groepen_1">Groepen_1A</string>
    <string name="title_activity_groepen_1_b">Groepen_1B</string>
    <string name="title_activity_groepen_1_c">Groepen_1C</string>
    <string name="title_activity_groepen_1_d">Groepen_1D</string>
    <string name="title_activity_groepen_1_e">Groepen_1E</string>
    <string name="title_activity_groepen_1_f">Groepen_1F</string>
    <string name="title_activity_groepen_1_g">Groepen_1G</string>
    <string name="title_activity_groepen_1_h">Groepen_1H</string>
    <string name="title_activity_groepenscherm">Groepenscherm</string>
    <string name="title_activity_overzicht_klassen_groepen">OverzichtKlassenGroepen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_beoordelingscherm_groepen">BeoordelingschermGroepen</string>
    <string name="title_activity_opmerkingenscherm_groepen">OpmerkingenschermGroepen</string>
    <string name="title_activity_bevestigingscherm_groepen">BevestigingschermGroepen</string>

</resources>
