<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ipmedt4.challengeweek_v2.Groepenscherm">


    <ImageView
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:id="@+id/hsleidenlogo"
        android:src="@drawable/logohsleiden"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groep1"
        android:textStyle="bold"
        android:id="@+id/Groep1"
        android:background="@drawable/roundedbutton"
        android:layout_below="@+id/hsleidenlogo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groep2"
        android:textStyle="bold"
        android:background="@drawable/roundedbutton"
        android:id="@+id/Groep2"
        android:layout_below="@+id/Groep1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:layout_alignRight="@+id/Groep1"
        android:layout_alignEnd="@+id/Groep1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/groepen"
        android:textSize="36sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/Groepen"
        android:layout_above="@+id/Groep1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groep3"
        android:textStyle="bold"
        android:id="@+id/Groep3"
        android:background="@drawable/roundedbutton"
        android:layout_below="@+id/Groep2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:layout_alignRight="@+id/Groep2"
        android:layout_alignEnd="@+id/Groep2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groep4"
        android:textStyle="bold"
        android:background="@drawable/roundedbutton"
        android:id="@+id/Groep4"
        android:layout_below="@+id/Groep3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:layout_alignRight="@+id/Groep3"
        android:layout_alignEnd="@+id/Groep3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groep5"
        android:id="@+id/Groep5"
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />

</RelativeLayout>
