<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ipmedt4.challengeweek_v2.Beginscherm" >
    
    <ImageView
        android:id="@+id/hsleidenlogo"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:src="@drawable/logohsleiden" />

    <TextView
        android:id="@+id/Overzicht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Overzicht"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/hsleidenlogo"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/Overzichtklassen"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/Overzichtklassen"
        android:textStyle="bold"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/Overzicht"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/Overzichtstudenten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/Overzichtstudenten"
        android:textStyle="bold"
        android:onClick="displayResultatenLijst"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/instellingen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/instellingen"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="84dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
