<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ipmedt4.challengeweek_v2.Instellingen">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Versie"
        android:id="@+id/versiebutton"
        android:background="@drawable/roundedbutton"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Disclaimer"
        android:id="@+id/disclaimerbutton"
        android:background="@drawable/roundedbutton"
        android:textColor="#000000"
        android:layout_below="@+id/versiebutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/versiebutton"
        android:layout_alignEnd="@+id/versiebutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Uitloggen"
        android:id="@+id/uitlogbutton"
        android:background="@drawable/roundedbutton"
        android:textColor="#000000"
        android:layout_below="@+id/disclaimerbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
