<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3399cc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ipmedt4.challengeweek_v2.Loginscherm" >
    
    <ImageView
     android:id="@+id/hsleidenlogo"
     android:src="@drawable/logohsleiden"
     android:layout_width="50dp"
     android:layout_height="55dp"
     />

    <TextView
        android:id="@+id/Challengeweek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aanmeldknop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:text="@string/Challengeweek"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailveld"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/aanmeldknop"
        android:layout_alignLeft="@+id/Challengeweek"
        android:layout_alignRight="@+id/Challengeweek"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="#ffffff"
        android:hint="@string/Email" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/wachtwoordveld"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/aanmeldknop"
        android:layout_alignLeft="@+id/emailveld"
        android:layout_alignRight="@+id/emailveld"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/Wachtwoord"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/aanmeldknop"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wachtwoordveld"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/wachtwoordveld"
        android:layout_marginBottom="161dp"
        android:background="#cccccc"
        android:text="Aanmelden"
        android:textStyle="bold" />

</RelativeLayout>