<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ipmedt4.challengeweek_v2.Bevestigingsscherm"
    android:id="@+id/">

    <ImageView
        android:id="@+id/hsleidenlogo"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:src="@drawable/logohsleiden" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neebeoordeling"
        android:background="#3399cc"
        android:id="@+id/bevestingannuleren"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="72dp"
        android:layout_alignRight="@+id/beoordelingbevestigen"
        android:layout_alignEnd="@+id/beoordelingbevestigen"
        android:layout_alignLeft="@+id/beoordelingbevestigen"
        android:layout_alignStart="@+id/beoordelingbevestigen" />

    <Button
        android:layout_width="456dp"
        android:layout_height="wrap_content"
        android:text="@string/jabevestigen"
        android:textColor="#000000"
        android:id="@+id/beoordelingbevestigen"
        android:background="#3399cc"
        android:layout_gravity="center_vertical"
        android:layout_above="@+id/bevestingannuleren"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vraagbeoordelingbevestigen"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/textView4"
        android:layout_above="@+id/bevestingannuleren"
        android:layout_toRightOf="@+id/hsleidenlogo"
        android:layout_toEndOf="@+id/hsleidenlogo"
        android:layout_marginBottom="48dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkmark"
        android:src="@drawable/Checkmarkblauw"
        android:layout_below="@+id/hsleidenlogo"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />


</RelativeLayout>
